--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,11 @@
 <h1>
   {{title}}
 </h1>
+
+<app-characteristic *ngFor='let characteristic of characteristics' [characteristic]="characteristic">
+
+</app-characteristic>
+
+<app-characteristic [characteristic]="'characteristic'">
+
+</app-characteristic>
