Get Bluetooth Device's GAP Characteristics

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,10 @@
   {{title}}
 </h1>
 
+<button (click)="onScan()">
+  scan
+</button>
+
 <app-characteristic *ngFor='let characteristic of characteristics' [characteristic]="characteristic">
 
 </app-characteristic>
