--- a/src/app/characteristic/characteristic.component.html
+++ b/src/app/characteristic/characteristic.component.html
@@ -1,3 +1,10 @@
-<p>
-  characteristic works!
-</p>
+Characteristic {{characteristic.uuid}}<br>
+<!--authenticatedSignedWrites: {{characteristic.properties.authenticatedSignedWrites}}<br>-->
+<!--broadcast : {{characteristic.properties.broadcast}}<br>-->
+<!--indicate : {{characteristic.properties.indicate}}<br>-->
+<!--notify : {{characteristic.properties.notify}}<br>-->
+<!--read : {{characteristic.properties.read}}<br>-->
+<!--reliableWrite : {{characteristic.properties.reliableWrite}}<br>-->
+<!--writableAuxiliaries : {{characteristic.properties.writableAuxiliaries}}<br>-->
+<!--write : {{characteristic.properties.write}}<br>-->
+<!--writeWithoutResponse : {{characteristic.properties.writeWithoutResponse}}<br>-->
