--- a/src/app/service/service.component.html
+++ b/src/app/service/service.component.html
@@ -1,11 +1,17 @@
-<md-list-item>
-  <h4 md-line>{{serviceName}}</h4>
-  <p md-line *ngIf="service.isPrimary">PRIMARY SERVICE</p>
-</md-list-item>
-<app-characteristic *ngFor='let characteristic of characteristics' [characteristic]="characteristic">
+<td-expansion-panel label="serviceName">
+  <template td-expansion-panel-label>
+    <span *ngIf="service.isPrimary">{{serviceName}}</span>
+  </template>
+  <div class="md-padding">
+    <h3 class="md-subhead" *ngIf="service.isPrimary"><md-icon>star</md-icon> PRIMARY SERVICE</h3>
+    <md-list>
+      <template let-item let-last="last" ngFor [ngForOf]="characteristics">
+        <app-characteristic  [characteristic]="item">
 
-</app-characteristic>
+        </app-characteristic>
+        <md-divider *ngIf="!last" md-inset></md-divider>
+      </template>
+    </md-list>
+  </div>
+</td-expansion-panel>
 <md-divider></md-divider>
-
-
-
