--- a/src/app/characteristic/characteristic.component.html
+++ b/src/app/characteristic/characteristic.component.html
@@ -1,25 +1,33 @@
 <md-list-item>
   <!--<md-icon md-list-avatar>person</md-icon>-->
   <h3 md-line> {{characteristicName}} </h3>
-  <h4 md-line> {{characteristic.uuid}} </h4>
-  <p md-line>Lorem ... </p>
-  <p md-line class="md-caption">Value : {{characteristicValue}}</p>
+  <h4 md-line> UUID:{{characteristic.uuid}} </h4>
+  <p md-line>Properties: {{supportedProperties}}</p>
+  <p md-line class="md-caption" *ngIf="characteristicValue">Value : {{characteristicValue}}</p>
+  <p md-line class="md-caption" *ngIf="isNotified">Notification is enabled</p>
   <span flex></span>
+  <!--<span class="md-caption text-right" flex="20"> test </span>-->
+</md-list-item>
+<div layout="row" style="margin-left:16px;">
   <button md-mini-fab color="accent" (click)="read()" *ngIf="readable">
     R
   </button>
-  <button md-mini-fab color="accent" (click)="notify()" *ngIf="notifiable">
+  <button md-mini-fab color="{{isNotified ? 'primary' : 'accent'}}" (click)="notify()" *ngIf="notifiable">
     N
   </button>
-  <!--<span>-->
-    <!--<button md-icon-button [md-menu-trigger-for]="menu">-->
-      <!--<md-icon>more_vert</md-icon>-->
-    <!--</button>-->
-    <!--<md-menu x-position="before" #menu="mdMenu">-->
-      <!--<button md-menu-item>Delete</button>-->
-    <!--</md-menu>-->
-  <!--</span>-->
-</md-list-item>
+</div>
+<!--<ng-template let-item let-last="last" ngFor [ngForOf]="items">-->
+<!--<a md-list-item layout-align="row" [routerLink]="['../item', item.item_id]">-->
+<!--<md-icon md-list-avatar> {{item.icon}} </md-icon>-->
+<!--<h3 md-line> {{item.name}} </h3>-->
+<!--<p md-line> {{item.description | truncate:40}} </p>-->
+<!--<span flex></span>-->
+<!--<span class="md-caption text-right" flex="20"> {{item.created | timeAgo }} </span>-->
+<!--</a>-->
+<!--<md-divider *ngIf="!last" md-inset></md-divider>-->
+<!--</ng-template>-->
+
+
 <!--authenticatedSignedWrites: {{characteristic.properties.authenticatedSignedWrites}}<br>-->
 <!--broadcast : {{characteristic.properties.broadcast}}<br>-->
 <!--indicate : {{characteristic.properties.indicate}}<br>-->
