--- a/src/app/service/service.component.html
+++ b/src/app/service/service.component.html
@@ -3,10 +3,10 @@
     <span *ngIf="service.isPrimary">{{serviceName}}</span>
   </template>
   <div class="md-padding">
-    <h3 class="md-subhead" *ngIf="service.isPrimary">
-      <md-icon>star</md-icon>
-      PRIMARY SERVICE
-    </h3>
+    <!--<h3 class="md-subhead" *ngIf="service.isPrimary">-->
+      <!--<md-icon>star</md-icon>-->
+      <!--PRIMARY SERVICE-->
+    <!--</h3>-->
     <md-list>
       <template let-item let-last="last" ngFor [ngForOf]="characteristics">
         <app-characteristic [characteristic]="item">
